add training routes
